# datakit-android

./: .gitignore  CHANGELOG  LICENSE  README.md  build.gradle  gradle.properties  maven_aar_publish.gradle  settings.gradle
FTSdkDemo/: .gitignore  build.gradle  settings.gradle
FTSdkDemo/app/: build.gradle  proguard-rules.pro
FTSdkDemo/app/src/main/: AndroidManifest.xml
FTSdkDemo/gradle/wrapper/: gradle-wrapper.properties
app/: .gitignore  build.gradle  proguard-rules.pro
app/src/androidTest/: AndroidManifest.xml
app/src/debug/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: browser_sdk_sample.html  local_sample.html  sample.html
demo/: .gitignore  build.gradle  settings.gradle
demo/app/: build.gradle  proguard-rules.pro
demo/app/src/main/: AndroidManifest.xml
demo/gradle/wrapper/: gradle-wrapper.properties
demo/nativelib/: build.gradle
ft-native/: CHANGELOG  CHANGELOG.md  build.gradle  proguard-rules.pro
ft-native/src/main/: AndroidManifest.xml
ft-native/src/main/cpp/: CMakeLists.txt  breakpad.cpp  native_exception_lib.cpp
ft-plugin/: CHANGELOG  CHANGELOG.md  README.md  build.gradle  maven.gradle
ft-sdk/: CHANGELOG  CHANGELOG.md  build.gradle  consumer-rules.pro  proguard-rules.pro
ft-sdk-optional-dependency-test/: build.gradle
ft-sdk-optional-dependency-test/src/main/: AndroidManifest.xml
ft-sdk/src/androidTest/: AndroidManifest.xml
ft-sdk/src/main/: AndroidManifest.xml
ft-session-replay/: CHANGELOG.md  build.gradle
ft-session-replay-compose/: CHANGELOG.md  build.gradle  consumer-rules.pro
ft-session-replay-material/: CHANGELOG.md  build.gradle
ft-test/: build.gradle
ft-test/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
(+1027 files in other folders)
